# TZ

./: .dockerignore  .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: fcb6a5891389_create_log_entries_table.py
client/: Dockerfile  README.md  main.py
client/models/: log_entry.py
client/services/: api_client.py  client.py  log_generator.py
core/: logging.py  settings.py
server/: Dockerfile  README.md  main.py
server/api/: __init__.py  data.py  stats.py
server/core/: logging.py  settings.py
server/database/: engine.py
server/database/crud/: log_entry.py
server/database/models/: base.py  log_entry.py
server/models/: log.py  log_entry.py
server/services/: log_entry.py  log_parser.py
tests/server/: test_api_data.py  test_log_parser.py  test_stats.py
tests/worker/: test_file_store.py  test_worker_service.py
worker/: Dockerfile  README.md  main.py
worker/services/: file_store.py  server_client.py  worker.py
