[project]
name = "tzmvideo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.5",
    "asyncpg>=0.31.0",
    "filelock>=3.19.1",
    "fastapi[standard]>=0.138.1",
    "httpx>=0.28.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "psycopg2-binary>=2.9.12",
    "pydantic-settings>=2.14.2",
    "python-json-logger>=3.3.0",
    "sqlalchemy>=2.0.51",
]
